--- a/style.css
+++ b/style.css
@@ -115,12 +115,15 @@ main {
   position: absolute;
   width: 100%;
   height: 100%;
-  opacity: 0.5;
+  opacity: 0;
   background-color: black;
+  transition: opacity 0.2s ease-in;
 }
 .image-info.visible {
   opacity: 1;
-  transition: opacity 0.2s ease-in;
+}
+.image-info.visible::after {
+  opacity: 0.5;
 }
 .like-info,
 .comment-info {
