--- a/style.css
+++ b/style.css
@@ -5,7 +5,12 @@
   --max-width: 62.1875rem;
   --padding: 0 1.875rem;
 }
-
+html,
+body {
+  width: 100%;
+  margin: 0;
+  overflow-x: hidden;
+}
 nav {
   width: 100%;
   height: 70px;
